--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@mdx-js/loader": "^3.0.1",
     "@mdx-js/react": "^3.0.1",
     "@next/mdx": "^14.2.3",
+    "@next/third-parties": "^14.2.3",
     "@types/mdx": "^2.0.13",
     "formik": "^2.4.6",
-    "next": "14.2.3",
+    "next": "^14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.2.1",
     "yup": "^1.4.0"
   },
   "devDependencies": {
