--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@next/third-parties": "^14.2.3",
     "@types/mdx": "^2.0.13",
     "formik": "^2.4.6",
+    "gray-matter": "^4.0.3",
     "next": "^14.2.3",
     "next-mdx-remote": "^5.0.0",
     "react": "^18",
