--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@next/mdx": "^14.2.3",
     "@next/third-parties": "^14.2.3",
     "@types/mdx": "^2.0.13",
+    "@vercel/analytics": "^1.3.1",
+    "@vercel/speed-insights": "^1.0.12",
     "formik": "^2.4.6",
     "gray-matter": "^4.0.3",
     "next": "^14.2.3",
