--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "resend": "^3.5.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
