--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "gray-matter": "^4.0.3",
     "next": "^14.2.3",
     "next-mdx-remote": "^5.0.0",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-preset-env": "^10.0.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
@@ -27,6 +29,7 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^6.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
