--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/mdx": "^2.0.13",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
+    "cssnano": "^7.0.6",
     "formik": "^2.4.6",
     "gray-matter": "^4.0.3",
     "next": "^14.2.3",
