--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,10 @@
 {
   "compilerOptions": {
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -18,11 +22,26 @@
       }
     ],
     "paths": {
-      "@/*": ["./*"],
-      "@components":["./components"],
-      "@posts": ["./blogposts"]
-    }
+      "@/*": [
+        "./*"
+      ],
+      "@components": [
+        "./components"
+      ],
+      "@posts": [
+        "./blogposts"
+      ]
+    },
+    "target": "ES2017"
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "components/BlogCard.jsx"],
-  "exclude": ["node_modules"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "components/BlogCard.jsx"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
