--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-dom": "19.0.0",
     "react-icons": "^5.2.1",
     "resend": "^3.5.0",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^6.0.0",
