--- a/package.json
+++ b/package.json
@@ -1,48 +1,19 @@
 {
-  "name": "personal-web",
-  "version": "0.1.0",
-  "private": true,
+  "name": "daniel-carce-web",
+  "type": "module",
+  "version": "0.0.1",
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview",
+    "astro": "astro"
   },
   "dependencies": {
-    "@mdx-js/loader": "^3.0.1",
-    "@mdx-js/react": "^3.0.1",
-    "@next/mdx": "15.1.6",
-    "@next/third-parties": "15.1.6",
-    "@types/mdx": "^2.0.13",
-    "@vercel/analytics": "^1.3.1",
-    "@vercel/speed-insights": "^1.0.12",
-    "cssnano": "^7.0.6",
-    "formik": "^2.4.6",
-    "gray-matter": "^4.0.3",
-    "next": "15.1.6",
-    "next-mdx-remote": "^5.0.0",
-    "postcss-flexbugs-fixes": "^5.0.2",
-    "postcss-preset-env": "^10.0.0",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-icons": "^5.2.1",
-    "resend": "^3.5.0",
-    "yup": "^1.4.0",
-    "zod": "^3.24.1"
+    "@tailwindcss/vite": "^4.1.12",
+    "astro": "^5.13.3",
+    "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
-    "@fullhuman/postcss-purgecss": "^6.0.0",
-    "@types/node": "^20",
-    "@types/react": "19.0.8",
-    "@types/react-dom": "19.0.3",
-    "eslint": "^8",
-    "eslint-config-next": "15.1.6",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
-  },
-  "overrides": {
-    "@types/react": "19.0.8",
-    "@types/react-dom": "19.0.3"
+    "@tailwindcss/typography": "^0.5.16"
   }
 }
