--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.16"
+    "@tailwindcss/typography": "^0.5.16",
+    "vite-plugin-compression": "^0.5.1"
   }
 }
