--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.12",
     "astro": "^5.13.3",
+    "resend": "^6.0.1",
     "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
