--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.12",
     "astro": "^5.13.3",
-    "resend": "^6.0.1",
+    "nodemailer": "^7.0.5",
     "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16",
+    "@types/nodemailer": "^7.0.1",
     "vite-plugin-compression": "^0.5.1"
   }
 }
