--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/vercel": "^8.2.7",
     "@tailwindcss/vite": "^4.1.12",
     "astro": "^5.13.3",
     "nodemailer": "^7.0.5",
